# CatGrayRemoteObjects

./: .gitmodules  CMakeLists.txt  README.md
examples/gui_examples/: CMakeLists.txt  gui_client_examples.cpp  gui_client_examplesB.cpp  gui_client_examplesC.cpp  gui_serives_examples.cpp
src/CatGrayRemoteObjects/: CMakeLists.txt  CatGrayRemoteObjects.cpp  CatGrayRemoteObjects.h
